segunda entrega proyecto final

--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,8 @@ header {
 }
 
 .imagenesCatalogo2 {
-  width: 223px;
+  width: 222px;
+  height: 250px;
 }
 
 h1 {
@@ -204,6 +205,11 @@ p {
 
 /* GRID DE PRODUCTOS*/
 
+.sickoProductos {
+  width: auto;
+  height: auto;
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: repeat(3, 25%);
@@ -241,6 +247,7 @@ p {
 .paginaSeleccionada {
   color: rgb(194, 194, 194);
 }
+
 /* =================================Media queries================================= */
 @media screen and (max-width: 375px) {
   .logotipoHeader {
@@ -325,7 +332,8 @@ p {
 
 @media screen and (max-width: 425px) {
   .logotipoHeader {
-    width: 50px;
+    width: 160px;
+    
   }
 
   .menuHeader {
@@ -341,12 +349,12 @@ p {
     flex-direction: column;
   }
   .imagenFondo {
-    width: 400px;
+    width: 150px;
     height: auto;
   }
 
   .intro_titulo {
-    font-size: 12px;
+    font-size: 20px;
   }
 
   .imagenesCatalogo {
@@ -355,12 +363,12 @@ p {
   }
 
   .imagenesCatalogo2 {
-    image-orientation: left;
-    width: 170px;
+    image-orientation: center;
+    width: 200px;
   }
 
   .flex-container {
-    height: 225px;
+    height: 100px;
   }
 
   .displayNone {
@@ -398,91 +406,20 @@ p {
   }
 
   .footer {
+    width: 100%;
     height: auto;
+    position: absolute;
+    bottom: 0;
+    left: 0;
   }
 }
 
 /* ---------------- 720px ---------------- */
 
-/* @media screen and (max-width: 720px) {
-  .logotipoHeader {
-    width: 200px;
-  }
-
-  .menuHeader {
-    font-size: 8px;
-  }
-
-  .menuHeader li {
-    font-size: 10px;
-  }
-
-  .header {
-    display: flex;
-    flex-direction: column;
-  }
   .imagenFondo {
-    width: 374px;
+    width: 300px;
     height: auto;
   }
-
-  .intro_titulo {
-    font-size: 12px;
-  }
-
-  .imagenesCatalogo {
-    image-orientation: left;
-    width: 170px;
-  }
-
-  .imagenesCatalogo2 {
-    image-orientation: left;
-    width: 170px;
-  }
-
-  .flex-container {
-    height: 225px;
-  }
-
-  .displayNone {
-    display: none;
-    justify-content: center;
-  }
-
-  .textoCatalogo {
-    font-size: 15px;
-  }
-
-  .textoCatalogo2 {
-    font-size: 15px;
-  }
-
-  .grid-container {
-    grid-template-columns: repeat(2, 0.3fr);
-    gap: 10px;
-  }
-
-  .grid-item img {
-    height: 150px;
-  }
-
-  .mapaUbicacion {
-    width: 90vw;
-  }
-
-  .form {
-    width: 70vw;
-  }
-
-  .textarea {
-    width: 60vw;
-  }
-
-  .footer {
-    height: auto;
-  }
-} */
-
 
 /* ---------------- 768px ---------------- */
 
