--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,74 @@
+.logotipoHeader {
+  width: 250px; }
+
+.nav-link {
+  color: white; }
+
+.nav-link:hover {
+  color: grey;
+  transition: all 0.3s; }
+
+.dropdown-menu {
+  background-color: #0f0f0f; }
+
+.dropdown-item {
+  color: white; }
+
+.paginaSeleccionada {
+  color: #c2c2c2; }
+
+/* contacto */
+.seccionContacto {
+  color: white;
+  display: flex;
+  flex-direction: inline; }
+
+.footer {
+  width: 100vw;
+  height: 200px;
+  position: absolute;
+  background-color: #0f0f0f; }
+
+.contactoSicko {
+  background-image: url(../assets/naruto-panel.png);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center; }
+
+.mapaUbicacion {
+  width: 60vw; }
+
+.form {
+  display: flex;
+  flex-flow: column;
+  background-color: #131313;
+  width: 30%;
+  height: 60%;
+  padding: 20px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px; }
+
+.campoFormulario {
+  width: 250px;
+  height: 30px; }
+
+.campoFormulario::placeholder {
+  text-align: center; }
+
+.bloqueTexto {
+  width: 80vw; }
+
+.footerUbicacion {
+  width: 100vw;
+  height: 200px;
+  margin-top: 50px;
+  background-color: var(--colorCorporativo); }
+
 /* Variables */
 :root {
   --colorCorporativo: rgb(8, 8, 8); }
@@ -16,6 +87,248 @@
 .anchors {
   color: white;
   font-weight: 700; }
+
+.paginaSeleccionada {
+  color: #c2c2c2; }
+
+.bloqueTexto {
+  width: 80vw; }
+
+/* =================================Media queries================================= */
+/* ---------------- 1024px ---------------- */
+@media screen and (max-width: 1024px) {
+  .logotipoHeader {
+    width: 650px; }
+  .menuHeader {
+    font-size: 10px; }
+  .menuHeader li {
+    font-size: 10px; }
+  .header {
+    display: flex;
+    flex-direction: column; }
+  .imagenFondo {
+    width: 400px;
+    height: auto; }
+  .intro_titulo {
+    font-size: 27px; }
+  .imagenesCatalogo {
+    image-orientation: left;
+    width: 220px;
+    float: left; }
+  .imagenesCatalogo2 {
+    image-orientation: left;
+    width: 220px; }
+  .flex-container {
+    height: 225px; }
+  .displayNone {
+    display: none;
+    justify-content: center; }
+  .textoCatalogo {
+    font-size: 15px; }
+  .textoCatalogo2 {
+    font-size: 15px; }
+  .grid-container {
+    grid-template-columns: repeat(2, 0.3fr);
+    gap: 10px; }
+  .grid-item img {
+    height: 150px; }
+  .mapaUbicacion {
+    width: 90vw; }
+  .form {
+    width: 70vw; }
+  .textarea {
+    width: 60vw; }
+  .footer {
+    height: auto; } }
+
+/* ---------------- 1024px ---------------- */
+@media screen and (max-width: 1024px) {
+  .logotipoHeader {
+    width: 150px; }
+  .menuHeader {
+    font-size: 8px; }
+    .menuHeader li {
+      font-size: 10px; }
+  .header {
+    display: flex;
+    flex-direction: column; }
+  .imagenFondo {
+    width: 300px;
+    height: auto; }
+  .intro_titulo {
+    font-size: 27px; }
+  .imagenesCatalogo {
+    image-orientation: left;
+    width: 220px;
+    float: left; }
+  .imagenesCatalogo2 {
+    image-orientation: left;
+    width: 220px; }
+  .flex-container {
+    height: 225px; }
+  .displayNone {
+    display: none;
+    justify-content: center; }
+  .textoCatalogo {
+    font-size: 15px; }
+  .textoCatalogo2 {
+    font-size: 15px; }
+  .grid-container {
+    grid-template-columns: repeat(2, 0.3fr);
+    gap: 10px; }
+  .grid-item img {
+    height: 150px; }
+  .mapaUbicacion {
+    width: 90vw; }
+  .form {
+    width: 70vw; }
+  .textarea {
+    width: 60vw; }
+  .footer {
+    height: auto; } }
+
+/* ---------------- 768px ---------------- */
+@media screen and (max-width: 768px) {
+  .logotipoHeader {
+    width: 200px; }
+  .menuHeader {
+    font-size: 8px; }
+    .menuHeader li {
+      font-size: 10px; }
+  .header {
+    display: flex;
+    flex-direction: column; }
+  .imagenFondo {
+    width: 374px;
+    height: auto; }
+  .intro_titulo {
+    font-size: 12px; }
+  .imagenesCatalogo {
+    image-orientation: left;
+    width: 170px; }
+  .imagenesCatalogo2 {
+    image-orientation: left;
+    width: 170px; }
+  .flex-container {
+    height: 225px; }
+  .displayNone {
+    display: none;
+    justify-content: center; }
+  .textoCatalogo {
+    font-size: 15px; }
+  .textoCatalogo2 {
+    font-size: 15px; }
+  .grid-container {
+    grid-template-columns: repeat(2, 0.3fr);
+    gap: 10px; }
+  .grid-item img {
+    height: 150px; }
+  .mapaUbicacion {
+    width: 90vw; }
+  .form {
+    width: 70vw; }
+  .textarea {
+    width: 60vw; }
+  .footer {
+    height: auto; } }
+
+/*----------------425px---------------- */
+@media screen and (max-width: 425px) {
+  .logotipoHeader {
+    width: 160px; }
+  .menuHeader {
+    font-size: 8px; }
+    .menuHeader li {
+      font-size: 10px; }
+  .header {
+    display: flex;
+    flex-direction: column; }
+  .imagenFondo {
+    width: 150px;
+    height: auto; }
+  .intro_titulo {
+    font-size: 20px; }
+  .imagenesCatalogo {
+    image-orientation: left;
+    width: 170px; }
+  .imagenesCatalogo2 {
+    image-orientation: center;
+    width: 200px; }
+  .flex-container {
+    height: 100px; }
+  .displayNone {
+    display: none;
+    justify-content: center; }
+  .textoCatalogo {
+    font-size: 15px; }
+  .textoCatalogo2 {
+    font-size: 15px; }
+  .grid-container {
+    grid-template-columns: repeat(2, 0.3fr);
+    gap: 10px; }
+  .grid-item img {
+    height: 150px; }
+  .mapaUbicacion {
+    width: 90vw; }
+  .form {
+    width: 70vw; }
+  .textarea {
+    width: 60vw; }
+  .footer {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    bottom: 0;
+    left: 0; } }
+
+/* ---------------- 375px ---------------- */
+@media screen and (max-width: 375px) {
+  .logotipoHeader {
+    width: 200px; }
+  .menuHeader {
+    font-size: 8px; }
+    .menuHeader li {
+      font-size: 10px; }
+  .header {
+    display: flex;
+    flex-direction: column; }
+  .imagenFondo {
+    width: 374px;
+    height: auto; }
+  .intro_titulo {
+    font-size: 12px; }
+  .imagenesCatalogo {
+    image-orientation: left;
+    width: 170px; }
+  .imagenesCatalogo2 {
+    image-orientation: left;
+    width: 170px; }
+  .flex-container {
+    height: 225px; }
+  .displayNone {
+    display: none;
+    justify-content: center; }
+  .textoCatalogo {
+    font-size: 15px; }
+  .textoCatalogo2 {
+    font-size: 15px; }
+  .grid-container {
+    grid-template-columns: repeat(2, 0.3fr);
+    gap: 10px; }
+  .grid-item img {
+    height: 150px; }
+  .mapaUbicacion {
+    width: 90vw; }
+  .form {
+    width: 70vw; }
+  .textarea {
+    width: 60vw; }
+  .footer {
+    height: auto; } }
+
+.imagenFondo {
+  width: 300px;
+  height: auto; }
 
 body {
   background-color: black;
@@ -42,9 +355,6 @@ header {
 #header .header__Menu ul a {
   text-decoration: none;
   color: white; }
-
-.logotipoHeader {
-  width: 250px; }
 
 .imagenFondo {
   min-width: 100vw; }
@@ -186,22 +496,6 @@ p {
   padding-bottom: 20px;
   text-align: center; }
 
-.nav-link {
-  color: white; }
-
-.nav-link:hover {
-  color: grey;
-  transition: all 0.3s; }
-
-.dropdown-menu {
-  background-color: #0f0f0f; }
-
-.dropdown-item {
-  color: white; }
-
-.paginaSeleccionada {
-  color: #c2c2c2; }
-
 .animacionStock {
   transition: letter-spacing 0.1s ease; }
 
@@ -241,9 +535,6 @@ header {
   #header .header__Menu ul a {
     text-decoration: none;
     color: white; }
-
-.logotipoHeader {
-  width: 250px; }
 
 .imagenFondo {
   min-width: 100vw; }
@@ -384,241 +675,3 @@ p {
 
 .dropdown-item {
   color: white; }
-
-.paginaSeleccionada {
-  color: #c2c2c2; }
-
-/* =================================Media queries================================= */
-@media screen and (max-width: 375px) {
-  .logotipoHeader {
-    width: 200px; }
-  .menuHeader {
-    font-size: 8px; }
-  .menuHeader li {
-    font-size: 10px; }
-  .header {
-    display: flex;
-    flex-direction: column; }
-  .imagenFondo {
-    width: 374px;
-    height: auto; }
-  .intro_titulo {
-    font-size: 12px; }
-  .imagenesCatalogo {
-    image-orientation: left;
-    width: 170px; }
-  .imagenesCatalogo2 {
-    image-orientation: left;
-    width: 170px; }
-  .flex-container {
-    height: 225px; }
-  .displayNone {
-    display: none;
-    justify-content: center; }
-  .textoCatalogo {
-    font-size: 15px; }
-  .textoCatalogo2 {
-    font-size: 15px; }
-  .grid-container {
-    grid-template-columns: repeat(2, 0.3fr);
-    gap: 10px; }
-  .grid-item img {
-    height: 150px; }
-  .mapaUbicacion {
-    width: 90vw; }
-  .form {
-    width: 70vw; }
-  .textarea {
-    width: 60vw; }
-  .footer {
-    height: auto; } }
-
-/*----------------425px---------------- */
-@media screen and (max-width: 425px) {
-  .logotipoHeader {
-    width: 160px; }
-  .menuHeader {
-    font-size: 8px; }
-  .menuHeader li {
-    font-size: 10px; }
-  .header {
-    display: flex;
-    flex-direction: column; }
-  .imagenFondo {
-    width: 150px;
-    height: auto; }
-  .intro_titulo {
-    font-size: 20px; }
-  .imagenesCatalogo {
-    image-orientation: left;
-    width: 170px; }
-  .imagenesCatalogo2 {
-    image-orientation: center;
-    width: 200px; }
-  .flex-container {
-    height: 100px; }
-  .displayNone {
-    display: none;
-    justify-content: center; }
-  .textoCatalogo {
-    font-size: 15px; }
-  .textoCatalogo2 {
-    font-size: 15px; }
-  .grid-container {
-    grid-template-columns: repeat(2, 0.3fr);
-    gap: 10px; }
-  .grid-item img {
-    height: 150px; }
-  .mapaUbicacion {
-    width: 90vw; }
-  .form {
-    width: 70vw; }
-  .textarea {
-    width: 60vw; }
-  .footer {
-    width: 100%;
-    height: auto;
-    position: absolute;
-    bottom: 0;
-    left: 0; } }
-
-.imagenFondo {
-  width: 300px;
-  height: auto; }
-
-/* ---------------- 768px ---------------- */
-@media screen and (max-width: 768px) {
-  .logotipoHeader {
-    width: 200px; }
-  .menuHeader {
-    font-size: 8px; }
-  .menuHeader li {
-    font-size: 10px; }
-  .header {
-    display: flex;
-    flex-direction: column; }
-  .imagenFondo {
-    width: 374px;
-    height: auto; }
-  .intro_titulo {
-    font-size: 12px; }
-  .imagenesCatalogo {
-    image-orientation: left;
-    width: 170px; }
-  .imagenesCatalogo2 {
-    image-orientation: left;
-    width: 170px; }
-  .flex-container {
-    height: 225px; }
-  .displayNone {
-    display: none;
-    justify-content: center; }
-  .textoCatalogo {
-    font-size: 15px; }
-  .textoCatalogo2 {
-    font-size: 15px; }
-  .grid-container {
-    grid-template-columns: repeat(2, 0.3fr);
-    gap: 10px; }
-  .grid-item img {
-    height: 150px; }
-  .mapaUbicacion {
-    width: 90vw; }
-  .form {
-    width: 70vw; }
-  .textarea {
-    width: 60vw; }
-  .footer {
-    height: auto; } }
-
-/* ---------------- 1024px ---------------- */
-@media screen and (max-width: 1024px) {
-  .logotipoHeader {
-    width: 150px; }
-  .menuHeader {
-    font-size: 8px; }
-  .menuHeader li {
-    font-size: 10px; }
-  .header {
-    display: flex;
-    flex-direction: column; }
-  .imagenFondo {
-    width: 300px;
-    height: auto; }
-  .intro_titulo {
-    font-size: 27px; }
-  .imagenesCatalogo {
-    image-orientation: left;
-    width: 220px;
-    float: left; }
-  .imagenesCatalogo2 {
-    image-orientation: left;
-    width: 220px; }
-  .flex-container {
-    height: 225px; }
-  .displayNone {
-    display: none;
-    justify-content: center; }
-  .textoCatalogo {
-    font-size: 15px; }
-  .textoCatalogo2 {
-    font-size: 15px; }
-  .grid-container {
-    grid-template-columns: repeat(2, 0.3fr);
-    gap: 10px; }
-  .grid-item img {
-    height: 150px; }
-  .mapaUbicacion {
-    width: 90vw; }
-  .form {
-    width: 70vw; }
-  .textarea {
-    width: 60vw; }
-  .footer {
-    height: auto; } }
-
-/* ---------------- 1042px ---------------- */
-@media screen and (max-width: 1024px) {
-  .logotipoHeader {
-    width: 650px; }
-  .menuHeader {
-    font-size: 10px; }
-  .menuHeader li {
-    font-size: 10px; }
-  .header {
-    display: flex;
-    flex-direction: column; }
-  .imagenFondo {
-    width: 400px;
-    height: auto; }
-  .intro_titulo {
-    font-size: 27px; }
-  .imagenesCatalogo {
-    image-orientation: left;
-    width: 220px;
-    float: left; }
-  .imagenesCatalogo2 {
-    image-orientation: left;
-    width: 220px; }
-  .flex-container {
-    height: 225px; }
-  .displayNone {
-    display: none;
-    justify-content: center; }
-  .textoCatalogo {
-    font-size: 15px; }
-  .textoCatalogo2 {
-    font-size: 15px; }
-  .grid-container {
-    grid-template-columns: repeat(2, 0.3fr);
-    gap: 10px; }
-  .grid-item img {
-    height: 150px; }
-  .mapaUbicacion {
-    width: 90vw; }
-  .form {
-    width: 70vw; }
-  .textarea {
-    width: 60vw; }
-  .footer {
-    height: auto; } }
