--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,30 +1,8 @@
-/* Variables */
-:root {
-  --colorCorporativo: rgb(8, 8, 8);
-}
-
-@mixin anchoAlto($ancho, $alto) {
-  width: $ancho;
-  height: $alto;
-}
-
-/* Reset del HTML */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-/* Clase para agregar padding-bottom en caso de ser necesario */
-.paddingBottom {
-  padding-bottom: 10px;
-}
-
-/* Estilo de los <a> */
-.anchors {
-  color: white;
-  font-weight: 700;
-}
+@import './utilities/mixins';
+@import './layout/navbar';
+@import './sections/contacto';
+@import './utilities/reset-variables';
+@import './utilities/mediaquery';
 
 body {
   background-color: black;
@@ -54,10 +32,6 @@ header {
 #header .header__Menu ul a {
   text-decoration: none;
   color: white;
-}
-
-.logotipoHeader {
-  width: 250px;
 }
 
 .imagenFondo {
@@ -227,27 +201,6 @@ p {
   text-align: center;
 }
 
-.nav-link {
-  color: white;
-}
-
-.nav-link:hover {
-  color: grey;
-  transition: all 0.3s;
-}
-
-.dropdown-menu {
-  background-color: rgb(15, 15, 15);
-}
-
-.dropdown-item {
-  color: white;
-}
-
-.paginaSeleccionada {
-  color: rgb(194, 194, 194);
-}
-
 .animacionStock {
   transition: letter-spacing 0.1s ease;
 }
@@ -294,9 +247,6 @@ header {
       }
     }
   }
-}
-.logotipoHeader {
-  width: 250px;
 }
 .imagenFondo {
   min-width: 100vw;
@@ -441,440 +391,3 @@ p {
 .dropdown-item {
   color: white;
 }
-.paginaSeleccionada {
-  color: rgb(194, 194, 194);
-}
-
-// @mixin anchoAlto($ancho, $alto) {
-//     width: $ancho;
-//     height: $alto;
-// }
-
-// @mixin grid-item {
-//     margin: 0;
-//     padding: 0;
-//     box-sizing: border-box;
-// }
-
-// .grid-item-1 {
-// @include grid-item;
-// }
-
-// .grid-item-2 {
-// @include grid-item;
-// }
-
-// -grid-item-3 {
-// @include grid-item;
-// }
-
-/* =================================Media queries================================= */
-@media screen and (max-width: 375px) {
-	.logotipoHeader {
-	  width: 200px;
-	}
-  
-	.menuHeader {
-	  font-size: 8px;
-	}
-  
-	.menuHeader li {
-	  font-size: 10px;
-	}
-  
-	.header {
-	  display: flex;
-	  flex-direction: column;
-	}
-	.imagenFondo {
-	  @include anchoAlto(374px, auto);
-	}
-  
-	.intro_titulo {
-	  font-size: 12px;
-	}
-  
-	.imagenesCatalogo {
-	  image-orientation: left;
-	  width: 170px;
-	}
-  
-	.imagenesCatalogo2 {
-	  image-orientation: left;
-	  width: 170px;
-	}
-  
-	.flex-container {
-	  height: 225px;
-	}
-  
-	.displayNone {
-	  display: none;
-	  justify-content: center;
-	}
-  
-	.textoCatalogo {
-	  font-size: 15px;
-	}
-  
-	.textoCatalogo2 {
-	  font-size: 15px;
-	}
-  
-	.grid-container {
-	  grid-template-columns: repeat(2, 0.3fr);
-	  gap: 10px;
-	}
-  
-	.grid-item img {
-	  height: 150px;
-	}
-  
-	.mapaUbicacion {
-	  width: 90vw;
-	}
-  
-	.form {
-	  width: 70vw;
-	}
-  
-	.textarea {
-	  width: 60vw;
-	}
-  
-	.footer {
-	  height: auto;
-	}
-  }
-  
-  /*----------------425px---------------- */
-  
-  @media screen and (max-width: 425px) {
-	.logotipoHeader {
-	  width: 160px;
-	}
-  
-	.menuHeader {
-	  font-size: 8px;
-	}
-  
-	.menuHeader li {
-	  font-size: 10px;
-	}
-  
-	.header {
-	  display: flex;
-	  flex-direction: column;
-	}
-	.imagenFondo {
-	  @include anchoAlto(150px, auto);
-	}
-  
-	.intro_titulo {
-	  font-size: 20px;
-	}
-  
-	.imagenesCatalogo {
-	  image-orientation: left;
-	  width: 170px;
-	}
-  
-	.imagenesCatalogo2 {
-	  image-orientation: center;
-	  width: 200px;
-	}
-  
-	.flex-container {
-	  height: 100px;
-	}
-  
-	.displayNone {
-	  display: none;
-	  justify-content: center;
-	}
-  
-	.textoCatalogo {
-	  font-size: 15px;
-	}
-  
-	.textoCatalogo2 {
-	  font-size: 15px;
-	}
-  
-	.grid-container {
-	  grid-template-columns: repeat(2, 0.3fr);
-	  gap: 10px;
-	}
-  
-	.grid-item img {
-	  height: 150px;
-	}
-  
-	.mapaUbicacion {
-	  width: 90vw;
-	}
-  
-	.form {
-	  width: 70vw;
-	}
-  
-	.textarea {
-	  width: 60vw;
-	}
-  
-	.footer {
-	  width: 100%;
-	  height: auto;
-	  position: absolute;
-	  bottom: 0;
-	  left: 0;
-	}
-  }
-  
-  .imagenFondo {
-	  @include anchoAlto(300px, auto);
-  }
-  
-  /* ---------------- 768px ---------------- */
-  
-  @media screen and (max-width: 768px) {
-	.logotipoHeader {
-	  width: 200px;
-	}
-  
-	.menuHeader {
-	  font-size: 8px;
-	}
-  
-	.menuHeader li {
-	  font-size: 10px;
-	}
-  
-	.header {
-	  display: flex;
-	  flex-direction: column;
-	}
-	.imagenFondo {
-	  @include anchoAlto(374px, auto);
-	}
-  
-	.intro_titulo {
-	  font-size: 12px;
-	}
-  
-	.imagenesCatalogo {
-	  image-orientation: left;
-	  width: 170px;
-	}
-  
-	.imagenesCatalogo2 {
-	  image-orientation: left;
-	  width: 170px;
-	}
-  
-	.flex-container {
-	  height: 225px;
-	}
-  
-	.displayNone {
-	  display: none;
-	  justify-content: center;
-	}
-  
-	.textoCatalogo {
-	  font-size: 15px;
-	}
-  
-	.textoCatalogo2 {
-	  font-size: 15px;
-	}
-  
-	.grid-container {
-	  grid-template-columns: repeat(2, 0.3fr);
-	  gap: 10px;
-	}
-  
-	.grid-item img {
-	  height: 150px;
-	}
-  
-	.mapaUbicacion {
-	  width: 90vw;
-	}
-  
-	.form {
-	  width: 70vw;
-	}
-  
-	.textarea {
-	  width: 60vw;
-	}
-  
-	.footer {
-	  height: auto;
-	}
-  }
-  
-  /* ---------------- 1024px ---------------- */
-  
-  @media screen and (max-width: 1024px) {
-	.logotipoHeader {
-	  width: 150px;
-	}
-  
-	.menuHeader {
-	  font-size: 8px;
-	}
-  
-	.menuHeader li {
-	  font-size: 10px;
-	}
-  
-	.header {
-	  display: flex;
-	  flex-direction: column;
-	}
-	.imagenFondo {
-	  width: 300px;
-	  height: auto;
-	}
-  
-	.intro_titulo {
-	  font-size: 27px;
-	}
-  
-	.imagenesCatalogo {
-	  image-orientation: left;
-	  width: 220px;
-	  float: left;
-	}
-  
-	.imagenesCatalogo2 {
-	  image-orientation: left;
-	  width: 220px;
-	}
-  
-	.flex-container {
-	  height: 225px;
-	}
-  
-	.displayNone {
-	  display: none;
-	  justify-content: center;
-	}
-  
-	.textoCatalogo {
-	  font-size: 15px;
-	}
-  
-	.textoCatalogo2 {
-	  font-size: 15px;
-	}
-  
-	.grid-container {
-	  grid-template-columns: repeat(2, 0.3fr);
-	  gap: 10px;
-	}
-  
-	.grid-item img {
-	  height: 150px;
-	}
-  
-	.mapaUbicacion {
-	  width: 90vw;
-	}
-  
-	.form {
-	  width: 70vw;
-	}
-  
-	.textarea {
-	  width: 60vw;
-	}
-  
-	.footer {
-	  height: auto;
-	}
-  }
-  
-  /* ---------------- 1042px ---------------- */
-  
-  @media screen and (max-width: 1024px) {
-	.logotipoHeader {
-	  width: 650px;
-	}
-  
-	.menuHeader {
-	  font-size: 10px;
-	}
-  
-	.menuHeader li {
-	  font-size: 10px;
-	}
-  
-	.header {
-	  display: flex;
-	  flex-direction: column;
-	}
-	.imagenFondo {
-	  @include anchoAlto(400px, auto);
-	}
-  
-	.intro_titulo {
-	  font-size: 27px;
-	}
-  
-	.imagenesCatalogo {
-	  image-orientation: left;
-	  width: 220px;
-	  float: left;
-	}
-  
-	.imagenesCatalogo2 {
-	  image-orientation: left;
-	  width: 220px;
-	}
-  
-	.flex-container {
-	  height: 225px;
-	}
-  
-	.displayNone {
-	  display: none;
-	  justify-content: center;
-	}
-  
-	.textoCatalogo {
-	  font-size: 15px;
-	}
-  
-	.textoCatalogo2 {
-	  font-size: 15px;
-	}
-  
-	.grid-container {
-	  grid-template-columns: repeat(2, 0.3fr);
-	  gap: 10px;
-	}
-  
-	.grid-item img {
-	  height: 150px;
-	}
-  
-	.mapaUbicacion {
-	  width: 90vw;
-	}
-  
-	.form {
-	  width: 70vw;
-	}
-  
-	.textarea {
-	  width: 60vw;
-	}
-  
-	.footer {
-	  height: auto;
-	}
-  }
-  
