--- a/scss/sections/_productos.scss
+++ b/scss/sections/_productos.scss
@@ -4,6 +4,7 @@
   @include anchoAlto(auto, auto);
 }
 
+// Container de las imagenes de productos
 .grid-container {
   display: grid;
   grid-template-columns: repeat(3, 25%);
