--- a/scss/utilities/_reset-variables.scss
+++ b/scss/utilities/_reset-variables.scss
@@ -21,10 +21,12 @@
   font-weight: 700;
 }
 
+// Clase que muestra visualmente en que página estás
 .paginaSeleccionada {
   color: rgb(194, 194, 194);
 }
 
+// Ancho para los textos largos
 .bloqueTexto {
   width: 80vw;
 }
